--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -64,13 +64,7 @@
                     <li><a href="{% url 'app:about' %}">About</a></li>
                     <li><a href="{% url 'app:package' %}">Packages</a></li>
                     <li><a href="{% url 'app:hotels' %}">Hotels</a></li>
-                    <li class="menu-has-children"><a href="">Blog</a>
-{#                        <ul>#}
-{#                            <li><a href="{% url 'app:blog-home'  %}">Blog Home</a></li>#}
-{#                            <li><a href="{% url 'app:blog-single' %}">Blog Single</a></li>#}
-{#                        </ul>#}
-                    </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="{% url 'app:contact' %}">Contact</a></li>
                     <li><a href="payment.html">Payment</a></li>
                      <li><a href="{% url 'app:logout' %}">Logout</a></li>
                 </ul>
@@ -410,141 +404,6 @@
 </section>
 <!-- End other-issue Area -->
 
-
-<!-- Start testimonial Area -->
-<section class="testimonial-area section-gap">
-    <div class="container">
-        <div class="row d-flex justify-content-center">
-            <div class="menu-content pb-70 col-lg-8">
-                <div class="title text-center">
-                    <h1 class="mb-10">Testimonial from our Clients</h1>
-                    <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall
-                        from </p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="active-testimonial">
-                <div class="single-testimonial item d-flex flex-row">
-                    <div class="thumb">
-                        <img class="img-fluid" src="/staticfiles/img/elements/user1.png" alt="">
-                    </div>
-                    <div class="desc">
-                        <p>
-                            Do you want to be even more successful? Learn to love learning and growth. The more effort
-                            you put into improving your skills, the bigger the payoff you.
-                        </p>
-                        <h4>Harriet Maxwell</h4>
-                        <div class="star">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="single-testimonial item d-flex flex-row">
-                    <div class="thumb">
-                        <img class="img-fluid" src="/staticfiles/img/elements/user2.png" alt="">
-                    </div>
-                    <div class="desc">
-                        <p>
-                            A purpose is the eternal condition for success. Every former smoker can tell you just how
-                            hard it is to stop smoking cigarettes. However.
-                        </p>
-                        <h4>Carolyn Craig</h4>
-                        <div class="star">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star"></span>
-                            <span class="fa fa-star"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="single-testimonial item d-flex flex-row">
-                    <div class="thumb">
-                        <img class="img-fluid" src="/staticfiles/img/elements/user1.png" alt="">
-                    </div>
-                    <div class="desc">
-                        <p>
-                            Do you want to be even more successful? Learn to love learning and growth. The more effort
-                            you put into improving your skills, the bigger the payoff you.
-                        </p>
-                        <h4>Harriet Maxwell</h4>
-                        <div class="star">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="single-testimonial item d-flex flex-row">
-                    <div class="thumb">
-                        <img class="img-fluid" src="/staticfiles/img/elements/user2.png" alt="">
-                    </div>
-                    <div class="desc">
-                        <p>
-                            A purpose is the eternal condition for success. Every former smoker can tell you just how
-                            hard it is to stop smoking cigarettes. However.
-                        </p>
-                        <h4>Carolyn Craig</h4>
-                        <div class="star">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star"></span>
-                            <span class="fa fa-star"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="single-testimonial item d-flex flex-row">
-                    <div class="thumb">
-                        <img class="img-fluid" src="/staticfiles/img/elements/user1.png" alt="">
-                    </div>
-                    <div class="desc">
-                        <p>
-                            Do you want to be even more successful? Learn to love learning and growth. The more effort
-                            you put into improving your skills, the bigger the payoff you.
-                        </p>
-                        <h4>Harriet Maxwell</h4>
-                        <div class="star">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="single-testimonial item d-flex flex-row">
-                    <div class="thumb">
-                        <img class="img-fluid" src="/staticfiles/img/elements/user2.png" alt="">
-                    </div>
-                    <div class="desc">
-                        <p>
-                            A purpose is the eternal condition for success. Every former smoker can tell you just how
-                            hard it is to stop smoking cigarettes. However.
-                        </p>
-                        <h4>Carolyn Craig</h4>
-                        <div class="star">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star"></span>
-                            <span class="fa fa-star"></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- End testimonial Area -->
-
 <!-- Start home-about Area -->
 <section class="home-about-area">
     <div class="container-fluid">
@@ -560,7 +419,7 @@
                     standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the
                     job is beyond reproach. inappropriate behavior is often laughed.
                 </p>
-                <a href="#" class="primary-btn text-uppercase">request custom price</a>
+                <a href="{% url 'app:contact' %}" class="primary-btn text-uppercase">request custom price</a>
             </div>
             <div class="col-lg-6 col-md-12 home-about-right no-padding">
                 <img class="img-fluid" src="/staticfiles/img/about-img.jpg" alt="">
@@ -570,165 +429,6 @@
 </section>
 <!-- End home-about Area -->
 
-
-<!-- Start blog Area -->
-<section class="recent-blog-area section-gap">
-    <div class="container">
-        <div class="row d-flex justify-content-center">
-            <div class="menu-content pb-60 col-lg-9">
-                <div class="title text-center">
-                    <h1 class="mb-10">Latest from Our Blog</h1>
-                    <p>With the exception of Nietzsche, no other madman has contributed so much to human sanity as
-                        has.</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="active-recent-blog-carusel">
-                <div class="single-recent-blog-post item">
-                    <div class="thumb">
-                        <img class="img-fluid" src="/staticfiles/img/b1.jpg" alt="">
-                    </div>
-                    <div class="details">
-                        <div class="tags">
-                            <ul>
-                                <li>
-                                    <a href="#">Travel</a>
-                                </li>
-                                <li>
-                                    <a href="#">Life Style</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <a href="#"><h4 class="title">Low Cost Advertising</h4></a>
-                        <p>
-                            Acres of Diamonds… you’ve read the famous story, or at least had it related to you. A
-                            farmer.
-                        </p>
-                        <h6 class="date">31st January,2018</h6>
-                    </div>
-                </div>
-                <div class="single-recent-blog-post item">
-                    <div class="thumb">
-                        <img class="img-fluid" src="/staticfiles/img/b2.jpg" alt="">
-                    </div>
-                    <div class="details">
-                        <div class="tags">
-                            <ul>
-                                <li>
-                                    <a href="#">Travel</a>
-                                </li>
-                                <li>
-                                    <a href="#">Life Style</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <a href="#"><h4 class="title">Creative Outdoor Ads</h4></a>
-                        <p>
-                            Acres of Diamonds… you’ve read the famous story, or at least had it related to you. A
-                            farmer.
-                        </p>
-                        <h6 class="date">31st January,2018</h6>
-                    </div>
-                </div>
-                <div class="single-recent-blog-post item">
-                    <div class="thumb">
-                        <img class="img-fluid" src="/staticfiles/img/b3.jpg" alt="">
-                    </div>
-                    <div class="details">
-                        <div class="tags">
-                            <ul>
-                                <li>
-                                    <a href="#">Travel</a>
-                                </li>
-                                <li>
-                                    <a href="#">Life Style</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <a href="#"><h4 class="title">It's Classified How To Utilize Free</h4></a>
-                        <p>
-                            Acres of Diamonds… you’ve read the famous story, or at least had it related to you. A
-                            farmer.
-                        </p>
-                        <h6 class="date">31st January,2018</h6>
-                    </div>
-                </div>
-                <div class="single-recent-blog-post item">
-                    <div class="thumb">
-                        <img class="img-fluid" src="/staticfiles/img/b1.jpg" alt="">
-                    </div>
-                    <div class="details">
-                        <div class="tags">
-                            <ul>
-                                <li>
-                                    <a href="#">Travel</a>
-                                </li>
-                                <li>
-                                    <a href="#">Life Style</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <a href="#"><h4 class="title">Low Cost Advertising</h4></a>
-                        <p>
-                            Acres of Diamonds… you’ve read the famous story, or at least had it related to you. A
-                            farmer.
-                        </p>
-                        <h6 class="date">31st January,2018</h6>
-                    </div>
-                </div>
-                <div class="single-recent-blog-post item">
-                    <div class="thumb">
-                        <img class="img-fluid" src="/staticfiles/img/b2.jpg" alt="">
-                    </div>
-                    <div class="details">
-                        <div class="tags">
-                            <ul>
-                                <li>
-                                    <a href="#">Travel</a>
-                                </li>
-                                <li>
-                                    <a href="#">Life Style</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <a href="#"><h4 class="title">Creative Outdoor Ads</h4></a>
-                        <p>
-                            Acres of Diamonds… you’ve read the famous story, or at least had it related to you. A
-                            farmer.
-                        </p>
-                        <h6 class="date">31st January,2018</h6>
-                    </div>
-                </div>
-                <div class="single-recent-blog-post item">
-                    <div class="thumb">
-                        <img class="img-fluid" src="/staticfiles/img/b3.jpg" alt="">
-                    </div>
-                    <div class="details">
-                        <div class="tags">
-                            <ul>
-                                <li>
-                                    <a href="#">Travel</a>
-                                </li>
-                                <li>
-                                    <a href="#">Life Style</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <a href="#"><h4 class="title">It's Classified How To Utilize Free</h4></a>
-                        <p>
-                            Acres of Diamonds… you’ve read the famous story, or at least had it related to you. A
-                            farmer.
-                        </p>
-                        <h6 class="date">31st January,2018</h6>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-</section>
-<!-- End recent-blog Area -->
 
 <!-- start footer Area -->
 <footer class="footer-area section-gap">
@@ -768,57 +468,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3  col-md-6 col-sm-6">
-                <div class="single-footer-widget">
-                    <h6>Newsletter</h6>
-                    <p>
-                        For business professionals caught between high OEM price and mediocre print and graphic output.
-                    </p>
-                    <div id="mc_embed_signup">
-                        <form target="_blank"
-                              action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                              method="get" class="subscription relative">
-                            <div class="input-group d-flex flex-row">
-                                <input name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''"
-                                       onblur="this.placeholder = 'Email Address '" required="" type="email">
-                                <button class="btn bb-btn"><span class="lnr lnr-location"></span></button>
-                            </div>
-                            <div class="mt-10 info"></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3  col-md-6 col-sm-6">
-                <div class="single-footer-widget mail-chimp">
-                    <h6 class="mb-20">InstaFeed</h6>
-                    <ul class="instafeed d-flex flex-wrap">
-                        <li><img src="/staticfiles/img/i1.jpg" alt=""></li>
-                        <li><img src="/staticfiles/img/i2.jpg" alt=""></li>
-                        <li><img src="/staticfiles/img/i3.jpg" alt=""></li>
-                        <li><img src="/staticfiles/img/i4.jpg" alt=""></li>
-                        <li><img src="/staticfiles/img/i5.jpg" alt=""></li>
-                        <li><img src="/staticfiles/img/i6.jpg" alt=""></li>
-                        <li><img src="/staticfiles/img/i7.jpg" alt=""></li>
-                        <li><img src="/staticfiles/img/i8.jpg" alt=""></li>
-                    </ul>
-                </div>
-            </div>
+
+
         </div>
 
-        <div class="row footer-bottom d-flex justify-content-between align-items-center">
-            <p class="col-lg-8 col-sm-12 footer-text m-0">
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-                    href="https://colorlib.com" target="_blank">Colorlib</a>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-            <div class="col-lg-4 col-sm-12 footer-social">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-dribbble"></i></a>
-                <a href="#"><i class="fa fa-behance"></i></a>
-            </div>
-        </div>
     </div>
 </footer>
 <!-- End footer Area -->
