--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -79,78 +79,78 @@
                 <h3 class="h3 text-white">It's Time To Travel Canada</h3><br><br>
                 <a href="#" class="primary-btn text-uppercase">Get Started</a>
             </div>
-            <div class="col-lg-4 col-md-6 banner-right" style="margin-top: 120px;">
-                <ul class="nav nav-tabs" id="myTab" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="flight-tab" data-toggle="tab" href="#flight" role="tab"
-                           aria-controls="flight" aria-selected="true">Flights</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="hotel-tab" data-toggle="tab" href="#hotel" role="tab"
-                           aria-controls="hotel" aria-selected="false">Hotels</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="holiday-tab" data-toggle="tab" href="#holiday" role="tab"
-                           aria-controls="holiday" aria-selected="false">Holidays</a>
-                    </li>
-                </ul>
-                <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active" id="flight" role="tabpanel" aria-labelledby="flight-tab">
-                        <form class="form-wrap">
-                            <input type="text" class="form-control" name="name" placeholder="From "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">
-                            <input type="text" class="form-control" name="to" placeholder="To "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">
-                            <input type="text" class="form-control date-picker" name="start" placeholder="Start "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">
-                            <input type="text" class="form-control date-picker" name="return" placeholder="Return "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Return '">
-                            <input type="number" min="1" max="20" class="form-control" name="adults"
-                                   placeholder="Adults " onfocus="this.placeholder = ''"
-                                   onblur="this.placeholder = 'Adults '">
-                            <input type="number" min="1" max="20" class="form-control" name="child" placeholder="Child "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">
-                            <a href="#" class="primary-btn text-uppercase">Search flights</a>
-                        </form>
-                    </div>
-                    <div class="tab-pane fade" id="hotel" role="tabpanel" aria-labelledby="hotel-tab">
-                        <form class="form-wrap">
-                            <input type="text" class="form-control" name="name" placeholder="From "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">
-                            <input type="text" class="form-control" name="to" placeholder="To "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">
-                            <input type="text" class="form-control date-picker" name="start" placeholder="Start "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">
-                            <input type="text" class="form-control date-picker" name="return" placeholder="Return "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Return '">
-                            <input type="number" min="1" max="20" class="form-control" name="adults"
-                                   placeholder="Adults " onfocus="this.placeholder = ''"
-                                   onblur="this.placeholder = 'Adults '">
-                            <input type="number" min="1" max="20" class="form-control" name="child" placeholder="Child "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">
-                            <a href="#" class="primary-btn text-uppercase">Search Hotels</a>
-                        </form>
-                    </div>
-                    <div class="tab-pane fade" id="holiday" role="tabpanel" aria-labelledby="holiday-tab">
-                        <form class="form-wrap">
-                            <input type="text" class="form-control" name="name" placeholder="From "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">
-                            <input type="text" class="form-control" name="to" placeholder="To "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">
-                            <input type="text" class="form-control date-picker" name="start" placeholder="Start "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">
-                            <input type="text" class="form-control date-picker" name="return" placeholder="Return "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Return '">
-                            <input type="number" min="1" max="20" class="form-control" name="adults"
-                                   placeholder="Adults " onfocus="this.placeholder = ''"
-                                   onblur="this.placeholder = 'Adults '">
-                            <input type="number" min="1" max="20" class="form-control" name="child" placeholder="Child "
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">
-                            <a href="#" class="primary-btn text-uppercase">Search Holidays</a>
-                        </form>
-                    </div>
-                </div>
-            </div>
+{#            <div class="col-lg-4 col-md-6 banner-right" style="margin-top: 120px;">#}
+{#                <ul class="nav nav-tabs" id="myTab" role="tablist">#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link active" id="flight-tab" data-toggle="tab" href="#flight" role="tab"#}
+{#                           aria-controls="flight" aria-selected="true">Flights</a>#}
+{#                    </li>#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" id="hotel-tab" data-toggle="tab" href="#hotel" role="tab"#}
+{#                           aria-controls="hotel" aria-selected="false">Hotels</a>#}
+{#                    </li>#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" id="holiday-tab" data-toggle="tab" href="#holiday" role="tab"#}
+{#                           aria-controls="holiday" aria-selected="false">Holidays</a>#}
+{#                    </li>#}
+{#                </ul>#}
+{#                <div class="tab-content" id="myTabContent">#}
+{#                    <div class="tab-pane fade show active" id="flight" role="tabpanel" aria-labelledby="flight-tab">#}
+{#                        <form class="form-wrap">#}
+{#                            <input type="text" class="form-control" name="name" placeholder="From "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">#}
+{#                            <input type="text" class="form-control" name="to" placeholder="To "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">#}
+{#                            <input type="text" class="form-control date-picker" name="start" placeholder="Start "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">#}
+{#                            <input type="text" class="form-control date-picker" name="return" placeholder="Return "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Return '">#}
+{#                            <input type="number" min="1" max="20" class="form-control" name="adults"#}
+{#                                   placeholder="Adults " onfocus="this.placeholder = ''"#}
+{#                                   onblur="this.placeholder = 'Adults '">#}
+{#                            <input type="number" min="1" max="20" class="form-control" name="child" placeholder="Child "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">#}
+{#                            <a href="#" class="primary-btn text-uppercase">Search flights</a>#}
+{#                        </form>#}
+{#                    </div>#}
+{#                    <div class="tab-pane fade" id="hotel" role="tabpanel" aria-labelledby="hotel-tab">#}
+{#                        <form class="form-wrap">#}
+{#                            <input type="text" class="form-control" name="name" placeholder="From "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">#}
+{#                            <input type="text" class="form-control" name="to" placeholder="To "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">#}
+{#                            <input type="text" class="form-control date-picker" name="start" placeholder="Start "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">#}
+{#                            <input type="text" class="form-control date-picker" name="return" placeholder="Return "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Return '">#}
+{#                            <input type="number" min="1" max="20" class="form-control" name="adults"#}
+{#                                   placeholder="Adults " onfocus="this.placeholder = ''"#}
+{#                                   onblur="this.placeholder = 'Adults '">#}
+{#                            <input type="number" min="1" max="20" class="form-control" name="child" placeholder="Child "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">#}
+{#                            <a href="#" class="primary-btn text-uppercase">Search Hotels</a>#}
+{#                        </form>#}
+{#                    </div>#}
+{#                    <div class="tab-pane fade" id="holiday" role="tabpanel" aria-labelledby="holiday-tab">#}
+{#                        <form class="form-wrap">#}
+{#                            <input type="text" class="form-control" name="name" placeholder="From "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'From '">#}
+{#                            <input type="text" class="form-control" name="to" placeholder="To "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'To '">#}
+{#                            <input type="text" class="form-control date-picker" name="start" placeholder="Start "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Start '">#}
+{#                            <input type="text" class="form-control date-picker" name="return" placeholder="Return "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Return '">#}
+{#                            <input type="number" min="1" max="20" class="form-control" name="adults"#}
+{#                                   placeholder="Adults " onfocus="this.placeholder = ''"#}
+{#                                   onblur="this.placeholder = 'Adults '">#}
+{#                            <input type="number" min="1" max="20" class="form-control" name="child" placeholder="Child "#}
+{#                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Child '">#}
+{#                            <a href="#" class="primary-btn text-uppercase">Search Holidays</a>#}
+{#                        </form>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
         </div>
     </div>
 </section>
@@ -343,7 +343,7 @@
                     <div class="thumb">
                         <img class="img-fluid" src="/staticfiles/img/o1.jpg" alt="">
                     </div>
-                    <a href="#">
+                    <a href="{% url 'app:contact' %}">
                         <h4>Rent a Car</h4>
                     </a>
                     <p>
@@ -356,7 +356,7 @@
                     <div class="thumb">
                         <img class="img-fluid" src="/staticfiles/img/o2.jpg" alt="">
                     </div>
-                    <a href="#">
+                    <a href="{% url 'app:contact' %}">
                         <h4>Cruise Booking</h4>
                     </a>
                     <p>
@@ -369,7 +369,7 @@
                     <div class="thumb">
                         <img class="img-fluid" src="/staticfiles/img/o3.jpg" alt="">
                     </div>
-                    <a href="#">
+                    <a href="{% url 'app:contact' %}">
                         <h4>To Do List</h4>
                     </a>
                     <p>
@@ -382,7 +382,7 @@
                     <div class="thumb">
                         <img class="img-fluid" src="/staticfiles/img/o4.jpg" alt="">
                     </div>
-                    <a href="#">
+                    <a href="{% url 'app:contact' %}">
                         <h4>Food Features</h4>
                     </a>
                     <p>
