--- a/app/templates/app/hotels.html
+++ b/app/templates/app/hotels.html
@@ -1,5 +1,4 @@
 {% extends 'app/base.html' %}
-
 <!DOCTYPE html>
 <html lang="zxx" class="no-js">
 
@@ -55,7 +54,7 @@
                 {% for hotel_obj in hotel_objs %}
                     <div class="col-lg-4">
                         <div class="single-destinations">
-                            <div class="thumb" ">
+                            <div class="thumb">
                                 <img style="object-fit: cover" height="150" width="349"  src="{{ hotel_obj.url }}" alt=""/>
                             </div>
                             <div class="details">
