--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,5 +1,5 @@
 {% extends 'app/base.html' %}
-{% block start %}
+
 
 <head>
     <style>
@@ -8,6 +8,7 @@
 }
     </style>
 </head>
+{% block start %}
 <div class="banner-area" style="padding: 100px; margin: fill">
     <div class="relative text-white container">
         <form method="POST">
@@ -31,11 +32,10 @@
                 <label for="exampleInputPassword1" class="form-label">Password</label>
                 <input type="password" name="password" class="form-control" id="exampleInputPassword1">
             </div>
+               <p style="color: white;font-weight:600">Don't have an account ? Create one <a style="color: darkblue" href="{% url 'app:register_page' %}">here</a></p>
             <button type="submit" style="alignment-baseline: center" class="primary-btn text-uppercase">Login</button>
         </form>
-        <p><a href="{% url 'app:passwordreset' %}"  style="color: darkblue;font-weight: 500;">Forgot password?</a></p>
-        <p style="color: white;font-weight:600">Don't have an account ?</p>
-        <button type="submit" style="alignment-baseline: center" class="primary-btn text-uppercase"><a style="color: white" href="{% url 'app:register_page' %}"> SIGN UP</a></button>
+        <p><a href="{% url 'app:passwordreset' %}"  style="color: white;font-weight: 500;">Forgot password?</a></p>
     </div>
 </div>
 {% endblock %}
